// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenubarButton 스냅샷 테스트 다른 ariaLabel 속성이 제공될 때 올바르게 렌더링된다 1`] = `
<button
  aria-controls="menubar"
  aria-haspopup="menu"
  aria-label="커스텀 접근성 레이블"
  aria-selected={false}
  className="font-32-Bold font-koddi cursor-pointer flex items-center rounded-[14px] w-[420px] h-[80px] p-5 
                bg-grayscale-100 text-grayscale-900 hover:bg-grayscale-200"
  role="menuitem"
  tabIndex={0}
>
  버튼 텍스트
</button>
`;

exports[`MenubarButton 스냅샷 테스트 선택 상태와 테마 속성이 모두 적용된 버튼이 올바르게 렌더링된다 1`] = `
<button
  aria-controls="menubar"
  aria-haspopup="menu"
  aria-label="선택된 테마 버튼"
  aria-selected={true}
  className="font-32-Bold font-koddi cursor-pointer flex items-center rounded-[14px] w-[420px] h-[80px] p-5 
                bg-grayscale-900 text-grayscale-200 hover:bg-grayscale-900"
  role="menuitem"
  tabIndex={0}
>
  선택된 테마 버튼
</button>
`;

exports[`MenubarButton 스냅샷 테스트 선택되지 않은 버튼이 올바르게 렌더링된다 1`] = `
<button
  aria-controls="menubar"
  aria-haspopup="menu"
  aria-label="선택되지 않은 버튼"
  aria-selected={false}
  className="font-32-Bold font-koddi cursor-pointer flex items-center rounded-[14px] w-[420px] h-[80px] p-5 
                bg-grayscale-100 text-grayscale-900 hover:bg-grayscale-200"
  role="menuitem"
  tabIndex={0}
>
  선택되지 않은 버튼
</button>
`;

exports[`MenubarButton 스냅샷 테스트 선택된 버튼이 올바르게 렌더링된다 1`] = `
<button
  aria-controls="menubar"
  aria-haspopup="menu"
  aria-label="선택된 버튼"
  aria-selected={true}
  className="font-32-Bold font-koddi cursor-pointer flex items-center rounded-[14px] w-[420px] h-[80px] p-5 
                bg-grayscale-900 text-grayscale-200 hover:bg-grayscale-900"
  role="menuitem"
  tabIndex={0}
>
  선택된 버튼
</button>
`;

exports[`MenubarButton 스냅샷 테스트 테마 속성이 적용된 버튼이 올바르게 렌더링된다 1`] = `
<button
  aria-controls="menubar"
  aria-haspopup="menu"
  aria-label="테마 적용 버튼"
  aria-selected={false}
  className="font-32-Bold font-koddi cursor-pointer flex items-center rounded-[14px] w-[420px] h-[80px] p-5 
                bg-grayscale-100 text-grayscale-900 hover:bg-grayscale-200"
  role="menuitem"
  tabIndex={0}
>
  테마 적용 버튼
</button>
`;

exports[`MenubarButton 엣지 케이스 테스트 매우 긴 텍스트를 올바르게 렌더링한다 1`] = `
<button
  aria-controls="menubar"
  aria-haspopup="menu"
  aria-label="긴 텍스트 버튼"
  aria-selected={false}
  className="font-32-Bold font-koddi cursor-pointer flex items-center rounded-[14px] w-[420px] h-[80px] p-5 
                bg-grayscale-100 text-grayscale-900 hover:bg-grayscale-200"
  role="menuitem"
  tabIndex={0}
>
  이것은 매우 긴 텍스트가 들어있는 메뉴 버튼입니다. 텍스트가 버튼 너비를 초과할 경우 어떻게 표시되는지 확인하기 위한 예시입니다.
</button>
`;

exports[`MenubarButton 엣지 케이스 테스트 빈 텍스트도 올바르게 렌더링한다 1`] = `
<button
  aria-controls="menubar"
  aria-haspopup="menu"
  aria-label="빈 텍스트 버튼"
  aria-selected={false}
  className="font-32-Bold font-koddi cursor-pointer flex items-center rounded-[14px] w-[420px] h-[80px] p-5 
                bg-grayscale-100 text-grayscale-900 hover:bg-grayscale-200"
  role="menuitem"
  tabIndex={0}
/>
`;
